[project]
name = "mxmftools"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2,<2.3",
    "pooch>=1.8.2",
    "rich>=14.0.0",
    "seekpath>=2.1.0",
    "typer>=0.15.4",
    "contourpy<1.3.3",
]

[project.scripts]
mxmf = "mxmftools:app"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pdm.build]
includes = ["src"]
excludes = ["tests", "tests/*", "*/tests"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "matplotlib-stubs>=0.3.2",
    "mypy>=1.15.0",
    "pyqt6>=6.9.1",
]
